# evenRealities-openCFW

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: arm-none-eabi-gcc.cmake
devices/g2-glasses/: g2-glasses.md
docs/: README.md  community-apps.md
docs/android/: README.md  api-endpoints.md  api-security-assessment.md  api-signing.md  app-architecture.md  audio-pipeline.md  ble-connectivity.md  firmware-update.md  native-libraries.md  new-findings.md  protobuf-message-catalog.md  protobuf-services.md  protocol-commands.md  protocol-layer.md
docs/community-research/: README.md
docs/community-research/i-soxi-protocol/: README.md
docs/devices/: README.md  g2-case.md  r1-cradle.md  r1-ring.md
docs/features/: README.md  brightness.md  conversate.md  display-output-howto.md  display-pipeline.md  display-viewport.md  even-ai.md  eventhub.md  gestures.md  navigation.md  teleprompter.md
docs/firmware/: README.md  SDKs.md  ble-em9305.md  ble-surface-report.md  box-case-mcu.md  codec-gx8002b.md  device-boot-call-trees.md  even-app-reverse-engineering.md  firmware-communication-topology.md  firmware-files.md  firmware-reverse-engineering.md  firmware-updates.md  g2-firmware-modules.md  g2-service-handler-index.md  ios-firmware-gap-report.md  ota-protocol.md  re-gaps-tracker.md  s200-bootloader.md  s200-firmware-ota.md  touch-cy8c4046fni.md
docs/firmware/analysis/: README.md  firmware-string-cross-reference.md  firmware-version-analysis.md  hardware-artifact-characterization.md  kernel-scheduler-architecture.md  sequence-replay-validation.md  service-dispatch-architecture.md  settings-protocol-architecture.md  startup-sequences.md  tagged-artifacts.md
docs/firmware/decompilation/: ANALYSIS.md  README.md
docs/firmware/decompilation/ble_em9305/: data_map.txt  function_map.txt  handler_map.txt  manifest.json  module_architecture.txt  rtos_map.txt
docs/firmware/decompilation/bootloader/: data_map.txt  function_map.txt  handler_map.txt  manifest.json  module_architecture.txt  rtos_map.txt
docs/firmware/decompilation/box_mcu/: data_map.txt  function_map.txt  handler_map.txt  manifest.json  module_architecture.txt  rtos_map.txt
docs/firmware/decompilation/codec/: codec_analysis.txt  data_map.txt  function_map.txt  handler_map.txt  manifest.json  module_architecture.txt  rtos_map.txt
docs/firmware/decompilation/main_firmware/: annotated_key_functions.c  data_map.txt  function_map.txt  handler_map.txt  manifest.json  module_architecture.txt  protobuf_schemas.txt  protobuf_validation.txt  rtos_map.txt  source_tree.txt
docs/firmware/decompilation/tools/: app_upgrades.tsv  apply_elog_upgrades.sh  apply_elog_upgrades_wave2.sh  ble_upgrades.tsv  cordio_upgrades.py  elog_bl_upgrades.tsv  elog_corrections.tsv  elog_scan_upgrades.tsv  elog_wave3_upgrades.py  function_map_upgrades.tsv  lib_upgrades.tsv  lvgl_upgrades.tsv  rtos_sed_commands.sh  upgrades_lvgl_lib_freetype.py
docs/firmware/decompilation/touch/: data_map.txt  function_map.txt  handler_map.txt  manifest.json  module_architecture.txt  rtos_map.txt
docs/firmware/modules/: README.md  ble-multi-connection.md  display-config.md  file-transfer.md  logger.md  quicklist-health.md  ring-relay.md  sequence-replay-assertions.md  settings-compact-notify.md  settings-dispatch.md  settings-envelope-parser.md  settings-headup-calibration.md  settings-local-data-status.md  settings-runtime-context.md  settings-selector-schema.md  settings-sync-module-config.md  wear-detection.md
docs/opencfw/: README.md  assumption-log.md  audio-and-voice-model.md  build-status.md  bundle-re-status.md  bundles-and-hardware.md  connection-and-identity-model.md  custom-firmware-roadmap.md  device-firmware-ownership-model.md  device-state-and-role-model.md  diagnostics-and-observability-model.md  evidence-index.md  feature-and-presentation-model.md  identified-functionality.md  image-formats-and-boot-path.md  inferred-functionality.md  input-and-gesture-model.md  lifecycle-and-orchestration-model.md  memory-and-persistence-model.md  peripheral-interface-model.md  r1-nordic-bundle-model.md  runtime-startup-and-task-model.md  sensor-and-calibration-model.md  service-map.md  settings-and-state-model.md  transport-and-packet-formats.md  unidentified-functionality.md  update-and-recovery-model.md
docs/planning/: README.md  android-findings-fixes.md  api-testing.md  build-phases.md  firmware-re-plan.md  remaining-fixes.md  roadmap.md
docs/protocols/: README.md  authentication.md  ble-uuids.md  connection-lifecycle.md  heartbeat.md  notification.md  nus-protocol.md  overview.md  packet-structure.md  services.md
docs/reference/: README.md  magic-numbers.md  unidentified-behaviors.md
linker/: apollo510b_bootloader.ld  apollo510b_main.ld  cy8c4046fni.ld  stm32_case.ld
tools/: install-build-dependencies.sh
